# Basic

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  package.json
.cursor/rules/: visionloop.mdc
.github/workflows/: ci.yml  e2e.yml
apps/ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: config.py  dedup.py  main.py
apps/ai-service/app/routes/: health.py  infer.py  models.py
apps/ai-service/app/workers/: __main__.py  api_client.py  celery_app.py  inference_stub.py  jobs_consumer.py  model_router.py  onnx_backends.py  retry_publisher.py  yolo_stub.py
apps/ai-service/tests/: test_api_client.py  test_dedup.py  test_fixture_onnx_inference.py  test_health.py  test_jobs_consumer.py  test_model_router.py  test_onnx_backends.py  test_retry.py  test_sam_singleton.py  test_yolo_singleton.py
apps/ai-service/tests/fixtures/: generate_fixtures.py  sam_fixture.onnx  yolo_fixture.onnx
apps/api/: .dockerignore  .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum  sqlc.yaml
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.pact.config.ts
docs/adr/: 0001-clean-architecture-go-api.md  0002-sqlc-over-orm.md  0003-better-auth-as-session-source.md  0004-rabbitmq-sse-job-lifecycle.md  0005-pgvector-reserved.md
docs/api/: openapi.yaml
docs/ops/: branch-protection.md
docs/spec/: visionloop-spec.md
infra/docker/: prometheus.yml
scripts/: dev-setup.sh  export_onnx.py
(+140 files in other folders)
